--- a/Strategy Games/Strategy.html
+++ b/Strategy Games/Strategy.html
@@ -14,12 +14,10 @@
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    
+    <!--Html inclusion script-->
+    <<script src="https://www.w3schools.com/lib/w3.js"></script>
 
-    <!--Script to include to include HTML page in one-->
-    <!--<script src="https://www.w3schools.com/lib/w3.js"></script>-->
-
-    <!--Link to Javascript-->
-    <!--script src="js/cecilHotel.js"></script>-->
-
-    <!--Link to CSS-->
-    <!--link rel="stylesheet" href="css/cecilHotel.css">-->
+    <!--Javascript Reference-->
+    <script src="js/StrategyGames.js"<script>
+   
